objects/icmrcobj1__c.object
<CustomObject>
    <fields>
        <fullName>field10__c</fullName>
        <label>field10</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filed10__c</fullName>
        <label>filed1</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filed11__c</fullName>
        <description>test22</description>
        <label>field11</label>
        <length>33</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>filed12__c</fullName>
        <label>field12</label>
        <length>222</length>
        <type>Text</type>
    </fields>
    <label>icmrcobj1</label>
    <nameField>
        <label>icmrcobj1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>icmrcobj1s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>